--- a/Xreveal_ARA.ini
+++ b/Xreveal_ARA.ini
@@ -71,20 +71,20 @@ Author=فتحي الداودية
 10=BD-Live تعطيل
 11=محاكاة شاشة 3الابعاد متصلة
 12=Rename folders
-13=Using &AES hardware acceleration
+13=Using AES &hardware acceleration
 14=<a>Benchmark</a>
 15=Remove &annoying adverts and trailers
-16=Remove video sequences shorter than %s minutes
+16=Remove video sequences &shorter than %s minutes
 
 [DIALOG_12]
 0=DB مفتاح 
 3=على أي مفتاح فك تشفير ، فأنت بحاجة إلى قاعدة بيانات أساسية لجعله يعمل Xreveal لا يحتوي. <a>اقرأ المزيد</a>.
 4=KeyDB.cfg موقع
-6=&Search key online
+6=&Find keys online if not found locally
 
 [DIALOG_13]
 0=My Drives
-3=&Select drives that you want to scan by Xreveal.
+3=&Select drives that you want to be scanned by Xreveal.
 5=&Disable AutoRun and AutoPlay
 8=Enable &LibreDrive for UHD
 
@@ -155,7 +155,7 @@ Author=فتحي الداودية
 1=Yes
 2=No
 3=Register
-4=No decryption keys were found in KeyDB.cfg. Do you want to evaluate the cloud decryption feature?
+4=The disc key was not found in KeyDB.cfg. Do you want to find it online?
 
 [DIALOG_23]
 0=Disc Information
@@ -182,18 +182,18 @@ Author=فتحي الداودية
 6=Error sound:
 
 [DIALOG_28]
-0=Create Dump File
+0=Create a Dump File
 3=Please wait...
 4=Adding %s...
-5=<a>How to submit dump files?</a>
+5=<a>How to submit a dump file?</a>
 6=The file has been successfully created.
 
 [DIALOG_29]
 0=Actions
-3=Post-Scan Action
+3=Post-Scan action
 4=Specify a command to run after scanning media.
 5=&Macros >>
-51=&Browse...
+6=&Browse...
 
 [DIALOG_A]
 0=تحديث البرامج
@@ -233,7 +233,7 @@ Author=فتحي الداودية
 10=C - روسيا والهند والصين وبقية العالم
 11=اسأل قبل فتح القرص
 12=لا تظهر مرة أخرى
-13=No CD/DVD/Blu-ray drive detected!\n\nPossible reasons:\n1. You don't have a CD/DVD/Blu-ray drive.\n\n2. The drive is not powered on or is not properly connected.
+13=No CD/DVD/Blu-ray drive detected!\n\nPossible reasons:\n1. You don't have a CD/DVD/Blu-ray drive.\n\n2. The drive is not powered on or it's not properly connected.
 14=%d.%d≠%d.%d عدم تطابق إصدار بالتعريف.\n\nXreveal الرجاء إعادة تثبيت .
 15=بعض الملفات المطلوبة مفقودة.\n\nXreveal الرجاء إعادة التثبيت.
 16=بنجاح Xreveal لم يتم تثبيت.\n\nهل تريد إصلاحه?
@@ -245,10 +245,10 @@ Author=فتحي الداودية
 22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=%s نسخ ...
 24=%.1f MB/s
-25=Operation successfully completed!
-26=No decryption key found in {%s}
+25=Operation completed successfully!
+26=The disc key is not found! {%s}
 27=
-28=Xreveal failed to open disc, error code: %s.
+28=Failed to open disc, error code: %s.
 29=محرك
 30=البائع
 31=المنتج
@@ -262,7 +262,7 @@ Author=فتحي الداودية
 39=%C:\[%S]
 40=&الحالة
 41=&Open in Explorer
-42=&Create Dump File
+42=&Create a dump file
 43=&Content Hash Verifier
 44=النسخ إلى &القرص الصلب...
 45=النسخ إلى &صورة...
@@ -280,7 +280,7 @@ Author=فتحي الداودية
 57=This program is freeware.\n\nIf this program is useful to you, you can make a <a>donation</a> to help us improve it.
 58=موجود بالفعل %s .\nهل تريد استبداله?
 59=هل انت متاكد انك تريد الغاء؟
-60=Your license expired on %s.
+60=Your license has expired on %s.
 61=المشغل
 62=رمز المنطقة
 63=التغييرات المتبقية
@@ -293,8 +293,8 @@ Author=فتحي الداودية
 70=شكرا على التسجيل!
 71=مفتاح التسجيل الذي ادخلته غير صحيح.
 72=No Disc
-73=Reset ALL the options to their default values?\n\nClicking 'No' will just reset current page options.
-74=RowId
+73=Reset ALL the options to their default values?\n\nClicking 'No' will reset the current page options.
+74=ID
 75=Status
 76=Label
 77=Type
@@ -324,7 +324,7 @@ Author=فتحي الداودية
 101=Verify ISO
 102=Verify Folder
 103=Verify Drive
-104=Bus Encryption Capable
+104=Bus encryption capable
 105=%s (Drive: %s)
 106=Open Log Folder
 107=Options
@@ -355,11 +355,11 @@ Author=فتحي الداودية
 132=%u%% complete
 133=Error reading from drive %C:!\nSectors: %u-%u
 134=Error reading %s!\nSectors: %u-%u
-135=Abort request acknowledged
+135=Aborted!
 136=Copying...
 137=Pro feature
 138=Update license
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
+139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed, and running!\n\nDo you want to continue?
 140=Delete incomplete file?\n\n%s
 141=Light
 142=Dark
