--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -74,7 +74,7 @@ Author=jekovcar
 13=Използвай &AES хардуерно ускорение
 14=<a>Бенчмарк</a>
 15=Remove &annoying adverts and trailers
-16=Remove video sequences shorter than %s minutes
+16=Remove video sequences &shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
@@ -190,10 +190,10 @@ Author=jekovcar
 
 [DIALOG_29]
 0=Actions
-3=Post-Scan Action
+3=Post-Scan action
 4=Specify a command to run after scanning media.
 5=&Macros >>
-51=&Browse...
+6=&Browse...
 
 [DIALOG_A]
 0=Актуализация софтуер
@@ -294,7 +294,7 @@ Author=jekovcar
 71=Въведеният регистрационен ключ е невалиден.
 72=Няма диск
 73=Нулирай ВСИЧКИ опции до подразбиране?\n\nЩракване върху „Не“ просто ще нулира опциите на текущата страница.
-74=RowId
+74=ID
 75=Статус
 76=Етикет
 77=Тип
