--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0804
 Name=Chinese (简体中文)
-Version=2.7.2
+Version=2.7.4
 Author=Tanuki
 1=确定
 2=取消
@@ -61,20 +61,20 @@ Author=Tanuki
 
 [DIALOG_11]
 0=BD & UHD
-3=启用 BD 支持(&E)
-4=移除 BD+
-5=移除 RC (区域码)
-6=光盘区域码:
-7=国家代码:
-8=移除 UOP (用户操作禁止)
-9=移除 CCI (拷贝控制信息)
-10=禁止 BD-Live
-11=模拟已连接 3D 显示器
+3=启用 BD 支持(&B)
+4=移除 &BD+
+5=移除 R&C (区域码)
+6=光盘区域码:(&D)
+7=国家代码:(&C)
+8=移除 &UOP (用户操作禁止)
+9=移除 &CCI (拷贝控制信息)
+10=禁止 BD-&Live
+11=模拟已连接 &3D 显示器
 12=重命名文件夹
-13=启用 &AES 硬件加速
+13=启用 AES 硬件加速(&H)
 14=<a>测速</a>
-15=Remove &annoying adverts and trailers
-16=Remove video sequences shorter than %s minutes
+15=移除烦人的广告和预告片(&A)
+16=移除长度短于 %s 分钟的视频(&S)
 
 [DIALOG_12]
 0=KeyDB
@@ -189,11 +189,11 @@ Author=Tanuki
 6=文件已成功创建。
 
 [DIALOG_29]
-0=Actions
-3=Post-Scan Action
-4=Specify a command to run after scanning media.
-5=&Macros >>
-51=&Browse...
+0=动作
+3=扫描后动作
+4=指定在扫描媒体后运行的命令。
+5=变量(&M)
+6=浏览(&B)...
 
 [DIALOG_A]
 0=软件更新
