--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -69,12 +69,12 @@ Author=
 8=Remove &UOPs (User Operation Prohibitions)
 9=Remove &CCI (Copy Control Information)
 10=Disable BD-&Live
-11=&Simulate connected 3D display
+11=Simulate connected &3D display
 12=Rename folders
-13=Using &AES hardware acceleration
+13=Using AES &hardware acceleration
 14=<a>Benchmark</a>
 15=Remove &annoying adverts and trailers
-16=Remove video sequences shorter than %s minutes
+16=Remove video sequences &shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
@@ -193,7 +193,7 @@ Author=
 3=Post-Scan action
 4=Specify a command to run after scanning media.
 5=&Macros >>
-51=&Browse...
+6=&Browse...
 
 [DIALOG_A]
 0=Software Update
