--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -74,7 +74,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 13=Gunakan akselerasi perangkat keras &AES
 14=<a>Benchmark</a>
 15=Remove &annoying adverts and trailers
-16=Remove video sequences shorter than %s minutes
+16=Remove video sequences &shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
@@ -190,10 +190,10 @@ Author= Lieba Natur Brilian (naturbrilian)
 
 [DIALOG_29]
 0=Actions
-3=Post-Scan Action
+3=Post-Scan action
 4=Specify a command to run after scanning media.
 5=&Macros >>
-51=&Browse...
+6=&Browse...
 
 [DIALOG_A]
 0=Pembaruan Perangkat Lunak
@@ -294,7 +294,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 71=Kunci registrasi yang anda masukkan tidak valid.
 72=Tidak ada Disc
 73=Kembalikan SEMUA opsi ke value default?\n\nMengklik 'Tidak' hanya akan mengembalikan ke opsi halaman saat ini.
-74=RowId
+74=ID
 75=Status
 76=Label
 77=Tipe
@@ -324,7 +324,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 101=Verifikasikan ISO
 102=Verifikasikan Folder
 103=Verifikasikan Drive
-104=Bus Encryption Capable
+104=Bus encryption capable
 105=%s (Drive: %s)
 106=Buka Folder Log
 107=Opsi
@@ -355,7 +355,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 132=%u%% selesai
 133=Masalah pembacaan dari drive %C:!\nSektor: %u-%u
 134=Masalah pembacaan %s!\nSektor: %u-%u
-135=Abort request acknowledged
+135=Aborted!
 136=Menyalin...
 137=Fitur pro
 138=Perbarui lisensi
