--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -74,13 +74,13 @@ Author=bovirus (bovirus@gmail.com)
 13=Usa accelerazione hardware &AES
 14=<a>Prestazioni</a>
 15=Remove &annoying adverts and trailers
-16=Remove video sequences shorter than %s minutes
+16=Remove video sequences &shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
 3=Xreveal non contiene alcuna chiave di decrittazione.\nPer farlo funzionare è necessario un database di chiavi. <a>Maggiori info</a>.
 4=Percorso file KeyDB.cfg
-6=&Search key online
+6=&Find keys online if not found locally
 
 [DIALOG_13]
 0=Mie unità
@@ -182,18 +182,18 @@ Author=bovirus (bovirus@gmail.com)
 6=Error sound:
 
 [DIALOG_28]
-0=Create Dump File
+0=Create a Dump File
 3=Please wait...
 4=Adding %s...
-5=<a>How to submit dump files?</a>
+5=<a>How to submit a dump file?</a>
 6=The file has been successfully created.
 
 [DIALOG_29]
 0=Actions
-3=Post-Scan Action
+3=Post-Scan action
 4=Specify a command to run after scanning media.
 5=&Macros >>
-51=&Browse...
+6=&Browse...
 
 [DIALOG_A]
 0=Aggiornamento programma
@@ -245,7 +245,7 @@ Author=bovirus (bovirus@gmail.com)
 22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Copia di %s...
 24=%.1f MB/s
-25=Operation successfully completed!
+25=Operation completed successfully!
 26=La chiave del disco non è stata trovata in {%s}
 27=
 28=Xreveal non è riuscito ad aprire il disco, codice errore: %s.
@@ -262,7 +262,7 @@ Author=bovirus (bovirus@gmail.com)
 39=%C:\[%S]
 40=&Stato
 41=&Open in Explorer
-42=&Create Dump File
+42=&Create a dump file
 43=&Content Hash Verifier
 44=Crea immagine nel &disco fisso...
 45=Crea file i&mmagine ISO...
@@ -280,7 +280,7 @@ Author=bovirus (bovirus@gmail.com)
 57=Stai usando la versione gratuita, <a>aggiorna alla versione Pro</a> per sbloccare funzionalità aggiuntive.
 58=Il file [%s] esiste già.\nVuoi sostituire il file esistente?
 59=Sei sicuro di voler annullare l'operazione?
-60=Your license expired on %s.
+60=Your license has expired on %s.
 61=Riproduttore
 62=Codice regionale
 63=Cambiamenti disponibili
@@ -324,7 +324,7 @@ Author=bovirus (bovirus@gmail.com)
 101=Verify ISO
 102=Verify Folder
 103=Verify Drive
-104=Bus Encryption Capable
+104=Bus encryption capable
 105=%s (Drive: %s)
 106=Open Log Folder
 107=Options
@@ -355,11 +355,11 @@ Author=bovirus (bovirus@gmail.com)
 132=%u%% complete
 133=Error reading from drive %C:!\nSectors: %u-%u
 134=Error reading %s!\nSectors: %u-%u
-135=Abort request acknowledged
+135=Aborted!
 136=Copying...
 137=Pro feature
 138=Update license
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
+139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed, and running!\n\nDo you want to continue?
 140=Delete incomplete file?\n\n%s
 141=Light
 142=Dark
