--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -74,7 +74,7 @@ Author=Re*Index.(ot_inc)
 13=AES ハードウェアアクセラレーションを使用する(&A)
 14=<a>ベンチマーク</a>
 15=Remove &annoying adverts and trailers
-16=Remove video sequences shorter than %s minutes
+16=Remove video sequences &shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
@@ -190,10 +190,10 @@ Author=Re*Index.(ot_inc)
 
 [DIALOG_29]
 0=Actions
-3=Post-Scan Action
+3=Post-Scan action
 4=Specify a command to run after scanning media.
 5=&Macros >>
-51=&Browse...
+6=&Browse...
 
 [DIALOG_A]
 0=ソフトウェアアップデート
@@ -294,7 +294,7 @@ Author=Re*Index.(ot_inc)
 71=入力したキーは正しくありません。
 72=ディスクなし
 73=すべてのオプションを既定値にリセットしますか？\n\n「いいえ」をクリックすると、現在のページのオプションがリセットされるだけです。
-74=RowID
+74=ID
 75=状態
 76=ラベル
 77=タイプ
