--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -74,7 +74,7 @@ Author=VenusGirl (비너스걸)
 13=AES 하드웨어 가속화 사용(&A)
 14=<a>북마크</a>
 15=Remove &annoying adverts and trailers
-16=Remove video sequences shorter than %s minutes
+16=Remove video sequences &shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
@@ -190,10 +190,10 @@ Author=VenusGirl (비너스걸)
 
 [DIALOG_29]
 0=Actions
-3=Post-Scan Action
+3=Post-Scan action
 4=Specify a command to run after scanning media.
 5=&Macros >>
-51=&Browse...
+6=&Browse...
 
 [DIALOG_A]
 0=소프트웨어 업데이트
@@ -294,7 +294,7 @@ Author=VenusGirl (비너스걸)
 71=입력한 등록 키가 잘못되었습니다.
 72=디스크 없음
 73=모든 옵션을 기본값으로 재설정하시겠습니까?\n\n아니오'를 클릭하면 현재 페이지 옵션만 재설정됩니다.
-74=행 Id
+74=ID
 75=상태
 76=레이블
 77=유형
