--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -74,7 +74,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 13=Usar aceleración por hardware &AES
 14=<a>Prueba de rendimiento</a>
 15=Eliminar anuncios &molestos y tráileres
-16=Eliminar secuencias de vídeo inferiores a %s minutos
+16=Eliminar &secuencias de vídeo inferiores a %s minutos
 
 [DIALOG_12]
 0=KeyDB
@@ -193,7 +193,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 3=Acción post-análisis
 4=Especifica un comando a ejecutar tras analizar los medios.
 5=&Macros >>
-51=&Examinar...
+6=&Examinar...
 
 [DIALOG_A]
 0=Actualización de Software
