--- a/Xreveal_CHT.ini
+++ b/Xreveal_CHT.ini
@@ -71,16 +71,16 @@ Author=
 10=禁用 BD-Live
 11=模擬連接的 3D 顯示
 12=Rename folders
-13=Using &AES hardware acceleration
+13=Using AES &hardware acceleration
 14=<a>Benchmark</a>
 15=Remove &annoying adverts and trailers
-16=Remove video sequences shorter than %s minutes
+16=Remove video sequences &shorter than %s minutes
 
 [DIALOG_12]
 0=密鑰資料庫
 3=Xreveal 不包含任何解密金鑰，您需要一個金鑰資料庫才能使其運作。 <a>了解更多詳情</a>。
 4=KeyDB.cfg 位置
-6=&Search key online
+6=&Find keys online if not found locally
 
 [DIALOG_13]
 0=My Drives
@@ -155,7 +155,7 @@ Author=
 1=Yes
 2=No
 3=Register
-4=No decryption keys were found in KeyDB.cfg. Do you want to evaluate the cloud decryption feature?
+4=The disc key was not found in KeyDB.cfg. Do you want to find it online?
 
 [DIALOG_23]
 0=Disc Information
@@ -182,18 +182,18 @@ Author=
 6=Error sound:
 
 [DIALOG_28]
-0=Create Dump File
+0=Create a Dump File
 3=Please wait...
 4=Adding %s...
-5=<a>How to submit dump files?</a>
+5=<a>How to submit a dump file?</a>
 6=The file has been successfully created.
 
 [DIALOG_29]
 0=Actions
-3=Post-Scan Action
+3=Post-Scan action
 4=Specify a command to run after scanning media.
 5=&Macros >>
-51=&Browse...
+6=&Browse...
 
 [DIALOG_A]
 0=版本更新
@@ -245,10 +245,10 @@ Author=
 22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=正在複製 %s...
 24=%.1f MB/s
-25=Operation successfully completed!
-26=在 {%s} 中找不到解密金鑰
+25=Operation completed successfully!
+26=The disc key is not found! {%s}
 27=
-28=Xreveal failed to open disc, error code: %s.
+28=Failed to open disc, error code: %s.
 29=駕駛
 30=供應商
 31=產品
@@ -262,10 +262,10 @@ Author=
 39=%C:\[%S]
 40=狀態(&S)
 41=&Open in Explorer
-42=&Create Dump File
+42=&Create a dump file
 43=&Content Hash Verifier
 44=Rip to &Folder...
-45=Rip to &ISO file...
+45=Rip to &ISO File...
 46=啟用Xreveal(&E)
 47=禁用Xreveal(&D)
 48=設定(&設定)...
@@ -280,7 +280,7 @@ Author=
 57=程式是免費軟體。\n\n如果程式對您有用，您可以<a>捐贈</a>來幫助我們改進它。
 58=%s 已存在。\n您要替換它嗎？
 59=您確定要取消嗎？
-60=Your license expired on %s.
+60=Your license has expired on %s.
 61=玩家
 62=地區
 63=剩餘更改
@@ -294,7 +294,7 @@ Author=
 71=您輸入的註冊碼無效。
 72=無光碟
 73=將所有選項重設為其預設值？\n\n按一下「否」將僅重設目前頁面選項。
-74=RowId
+74=ID
 75=Status
 76=Label
 77=Type
@@ -324,7 +324,7 @@ Author=
 101=Verify ISO
 102=Verify Folder
 103=Verify Drive
-104=Bus Encryption Capable
+104=Bus encryption capable
 105=%s (Drive: %s)
 106=Open Log Folder
 107=Options
@@ -355,11 +355,11 @@ Author=
 132=%u%% complete
 133=Error reading from drive %C:!\nSectors: %u-%u
 134=Error reading %s!\nSectors: %u-%u
-135=Abort request acknowledged
+135=Aborted!
 136=Copying...
 137=Pro feature
 138=Update license
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
+139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed, and running!\n\nDo you want to continue?
 140=Delete incomplete file?\n\n%s
 141=Light
 142=Dark
