--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.7.3
+Version=2.7.4
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -73,8 +73,8 @@ Author=The Punisher
 12=Ordner temporär umbenennen
 13=&AES Hardwarebeschleunigung nutzen
 14=<a>Benchmark</a>
-15=Remove &annoying adverts and trailers
-16=Remove video sequences shorter than %s minutes
+15=Entfernung von &störender Werbung und Trailern
+16=Entfernung von Video-Sequenzen kürzer als %s Minuten
 
 [DIALOG_12]
 0=KeyDB
@@ -193,7 +193,7 @@ Author=The Punisher
 3=Aktion nach dem Scannen
 4=Erstellen oder laden Sie hier einen Befehl der nach dem Scannen einer Datei ausgeführt werden soll.
 5=&Makros >>
-51=&Suchen...
+6=&Suchen...
 
 [DIALOG_A]
 0=Software-Update
@@ -234,11 +234,11 @@ Author=The Punisher
 11=Nachfragen vor dem Öffnen einer Disc
 12=Nicht noch einmal anzeigen
 13=Kein CD/DVD/Blu-ray Laufwerk erkannt!\n\nMögliche Ursachen:\n1. Kein CD/DVD/Blu-ray Laufwerk installiert.\n\n2. Das Laufwerk erhält keinen Strom, weil z.B. ein Kabel nicht richtig eingesteckt ist, usw.
-14=Treiberversion %d stimmen nicht überein.%d≠%d.%d.\n\nBitte installieren Sie Xreveal neu.
+14=Treiberversion %d stimmt nicht überein.%d≠%d.%d.\n\nBitte installieren Sie Xreveal neu.
 15=Einige der erforderlichen Dateien fehlen.\n\nBitte installieren Sie Xreveal neu.
-16=Xreveal wurde nicht korrekt installiert.\n\nSoll dies behoben werden?
-17=Sie müssen Ihren Computer neu starten um Xreveal zu verwenden.\n\nMöchten Sie jetzt neu starten?
-18=Xreveal funktioniert nicht richtig wenn %s ausgeführt wird.\n\nMöchten Sie diese App schliessen?
+16=Xreveal wurde nicht korrekt installiert.\n\nSoll dies behoben werden ?
+17=Sie müssen Ihren Computer neu starten um Xreveal zu verwenden.\n\nMöchten Sie jetzt neu starten ?
+18=Xreveal funktioniert nicht richtig wenn %s ausgeführt wird.\n\nMöchten Sie diese App schliessen ?
 19=Xreveal durchsucht Laufwerk %C:
 20=Die eingelegte Disc wird in Kürze verfügbar sein, bitte haben Sie etwas Geduld!
 21=Xreveal ist nicht für Laufwerk %C: aktiviert!\n\nUm eine kopiergeschützte Disc zu rippen, muss Xreveal für das Laufwerk aktiviert sein.
@@ -294,7 +294,7 @@ Author=The Punisher
 71=Der von Ihnen eingegebene Registrierungsschlüssel ist falsch.
 72=Keine Disc
 73=Alle Einstellungen auf Standard zurücksetzen?\n\nWenn Sie auf 'Nein' klicken, wird nur die aktuelle Seite zurückgesetzt.
-74=RowId
+74=ID
 75=Status
 76=Label
 77=Typ
