--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -71,16 +71,16 @@ Author=Fresta
 10=Wyłącz BD-Live
 11=Symulacja podłączonego wyświetlacza 3D
 12=Rename folders
-13=Using &AES hardware acceleration
+13=Using AES &hardware acceleration
 14=<a>Benchmark</a>
 15=Remove &annoying adverts and trailers
-16=Remove video sequences shorter than %s minutes
+16=Remove video sequences &shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
 3=Xreveal nie zawiera żadnego klucza deszyfrującego, do jego działania potrzebna jest baza danych kluczy. <a>Czytaj więcej</a>.
 4=Lokalizacja KeyDB.cfg:
-6=&Search key online
+6=&Find keys online if not found locally
 
 [DIALOG_13]
 0=My Drives
@@ -155,7 +155,7 @@ Author=Fresta
 1=Yes
 2=No
 3=Register
-4=No decryption keys were found in KeyDB.cfg. Do you want to evaluate the cloud decryption feature?
+4=The disc key was not found in KeyDB.cfg. Do you want to find it online?
 
 [DIALOG_23]
 0=Disc Information
@@ -182,18 +182,18 @@ Author=Fresta
 6=Error sound:
 
 [DIALOG_28]
-0=Create Dump File
+0=Create a Dump File
 3=Please wait...
 4=Adding %s...
-5=<a>How to submit dump files?</a>
+5=<a>How to submit a dump file?</a>
 6=The file has been successfully created.
 
 [DIALOG_29]
 0=Actions
-3=Post-Scan Action
+3=Post-Scan action
 4=Specify a command to run after scanning media.
 5=&Macros >>
-51=&Browse...
+6=&Browse...
 
 [DIALOG_A]
 0=Aktualizacja
@@ -245,10 +245,10 @@ Author=Fresta
 22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Kopiowanie %s...
 24=%.1f MB/s
-25=Operation successfully completed!
+25=Operation completed successfully!
 26=Xreveal nie mógł znaleźć klucza deszyfrującego w KeyDB.cfg
 27=
-28=Xreveal failed to open disc, error code: %s.
+28=Failed to open disc, error code: %s.
 29=Napęd
 30=Sprzedawca
 31=Produkt
@@ -262,7 +262,7 @@ Author=Fresta
 39=%C:\[%S]
 40=&Status
 41=&Open in Explorer
-42=&Create Dump File
+42=&Create a dump file
 43=&Content Hash Verifier
 44=Zgraj na &Dysk Twardy...
 45=Zgraj do &Obrazu...
@@ -280,7 +280,7 @@ Author=Fresta
 57=Ten program jest darmowy.\n\nJeśli ten program jest dla Ciebie przydatny, możesz przekazać <a>darowiznę</a>, aby pomóc nam go ulepszyć.
 58=%s już istnieje.\nCzy chcesz to zastąpić?
 59=Czy na pewno chcesz anulować?
-60=Your license expired on %s.
+60=Your license has expired on %s.
 61=Odtwarzacz
 62=Region
 63=Zmian pozostało
@@ -294,7 +294,7 @@ Author=Fresta
 71=Wprowadzony klucz rejestracyjny jest nieprawidłowy.
 72=Brak Dysku
 73=Zresetować WSZYSTKIE opcje do wartości domyślnych?\n\nKliknięcie 'Nie' spowoduje zresetowanie bieżących opcji strony.
-74=RowId
+74=ID
 75=Status
 76=Label
 77=Type
@@ -324,7 +324,7 @@ Author=Fresta
 101=Verify ISO
 102=Verify Folder
 103=Verify Drive
-104=Bus Encryption Capable
+104=Bus encryption capable
 105=%s (Drive: %s)
 106=Open Log Folder
 107=Options
@@ -355,11 +355,11 @@ Author=Fresta
 132=%u%% complete
 133=Error reading from drive %C:!\nSectors: %u-%u
 134=Error reading %s!\nSectors: %u-%u
-135=Abort request acknowledged
+135=Aborted!
 136=Copying...
 137=Pro feature
 138=Update license
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
+139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed, and running!\n\nDo you want to continue?
 140=Delete incomplete file?\n\n%s
 141=Light
 142=Dark
