--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -74,7 +74,7 @@ Author=jekovcar
 13=Использовать аппаратное ускорение &AES
 14=<a>Бенчмарк</a>
 15=Remove &annoying adverts and trailers
-16=Remove video sequences shorter than %s minutes
+16=Remove video sequences &shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
@@ -190,10 +190,10 @@ Author=jekovcar
 
 [DIALOG_29]
 0=Actions
-3=Post-Scan Action
+3=Post-Scan action
 4=Specify a command to run after scanning media.
 5=&Macros >>
-51=&Browse...
+6=&Browse...
 
 [DIALOG_A]
 0=Обновление программы
@@ -294,7 +294,7 @@ Author=jekovcar
 71=Введенный вами регистрационный ключ недействителен.
 72=Нет диска
 73=Сбросить ВСЕ параметры к значениям по умолчанию?\n\nНажатие «Нет» приведет к сбросу параметров текущей страницы.
-74=RowId
+74=ID
 75=Статус
 76=Этикетка
 77=Тип
