--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -71,16 +71,16 @@ Author=Sopor
 10=Inaktivera BD-Live
 11=Simulera ansluten 3D-skärm
 12=Rename folders
-13=Using &AES hardware acceleration
+13=Using AES &hardware acceleration
 14=<a>Benchmark</a>
 15=Remove &annoying adverts and trailers
-16=Remove video sequences shorter than %s minutes
+16=Remove video sequences &shorter than %s minutes
 
 [DIALOG_12]
 0=KeyDB
 3=Xreveal innehåller ingen dekrypteringsnyckel, du behöver en nyckeldatabas för att få det att fungera. <a>Läs mer</a>.
 4=Plats för KeyDB.cfg
-6=&Search key online
+6=&Find keys online if not found locally
 
 [DIALOG_13]
 0=My Drives
@@ -155,7 +155,7 @@ Author=Sopor
 1=Yes
 2=No
 3=Register
-4=No decryption keys were found in KeyDB.cfg. Do you want to evaluate the cloud decryption feature?
+4=The disc key was not found in KeyDB.cfg. Do you want to find it online?
 
 [DIALOG_23]
 0=Disc Information
@@ -182,18 +182,18 @@ Author=Sopor
 6=Error sound:
 
 [DIALOG_28]
-0=Create Dump File
+0=Create a Dump File
 3=Please wait...
 4=Adding %s...
-5=<a>How to submit dump files?</a>
+5=<a>How to submit a dump file?</a>
 6=The file has been successfully created.
 
 [DIALOG_29]
 0=Actions
-3=Post-Scan Action
+3=Post-Scan action
 4=Specify a command to run after scanning media.
 5=&Macros >>
-51=&Browse...
+6=&Browse...
 
 [DIALOG_A]
 0=Programuppdatering
@@ -245,10 +245,10 @@ Author=Sopor
 22=Directory '%s' has not enough space!\nYou need an additional %s.
 23=Kopierar %s...
 24=%.1f MB/s
-25=Operation successfully completed!
+25=Operation completed successfully!
 26=Ingen dekrypteringsnyckel hittades i {%s}
 27=
-28=Xreveal failed to open disc, error code: %s.
+28=Failed to open disc, error code: %s.
 29=Enhet
 30=Leverantör
 31=Produkt
@@ -262,7 +262,7 @@ Author=Sopor
 39=%C:\[%S]
 40=&Status
 41=&Open in Explorer
-42=&Create Dump File
+42=&Create a dump file
 43=&Content Hash Verifier
 44=Kopiera till &hårddisk...
 45=Kopiera till avb&ild...
@@ -280,7 +280,7 @@ Author=Sopor
 57=Detta program är gratisprogram.\n\nOm det här programmet är användbart för dig kan du göra en <a>donation</a> för att hjälpa oss att förbättra det.
 58=%s existerar redan.\nVill du ersätta den?
 59=Är du säker på att du vill avbryta?
-60=Your license expired on %s.
+60=Your license has expired on %s.
 61=Spelare
 62=Regionkod
 63=Återstående antal ändringar
@@ -294,7 +294,7 @@ Author=Sopor
 71=Registreringsnyckeln du angivit är felaktig.
 72=Ingen skiva
 73=Återställ ALLA alternativ till deras standardvärden?\n\nOm du klickar på 'Nej' återställs bara aktuella sidalternativ.
-74=RowId
+74=ID
 75=Status
 76=Label
 77=Type
@@ -324,7 +324,7 @@ Author=Sopor
 101=Verify ISO
 102=Verify Folder
 103=Verify Drive
-104=Bus Encryption Capable
+104=Bus encryption capable
 105=%s (Drive: %s)
 106=Open Log Folder
 107=Options
@@ -355,11 +355,11 @@ Author=Sopor
 132=%u%% complete
 133=Error reading from drive %C:!\nSectors: %u-%u
 134=Error reading %s!\nSectors: %u-%u
-135=Abort request acknowledged
+135=Aborted!
 136=Copying...
 137=Pro feature
 138=Update license
-139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed and running!\n\nDo you want to continue?
+139=You are going to create a protected image file. The file can only be read from a virtual drive, if Xreveal is installed, and running!\n\nDo you want to continue?
 140=Delete incomplete file?\n\n%s
 141=Light
 142=Dark
