--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -57,6 +57,7 @@ Author=jekovcar
 7=Премахни APS (Система аналогова защита)
 8=Премахни UOP (Забрани потребителски операции)
 9=Премахни ARccOS
+10=Прозрачност на субтитрите
 11=Xreveal се нуждае от <a>libdvdcss-2.dll</a>, за отваряне на DVD дискове.
 
 [DIALOG_11]
@@ -118,12 +119,6 @@ Author=jekovcar
 
 [DIALOG_16]
 0=Регион за плейър
-
-[DIALOG_17]
-0=Субтитри
-3=Прозрачност на субтитрите
-4=Невидими
-5=Плътни
 
 [DIALOG_18]
 0=Регистрация на Xreveal
@@ -192,7 +187,7 @@ Author=jekovcar
 0=Actions
 3=Post-Scan action
 4=Specify a command to run after scanning media.
-5=&Macros >>
+5=&Variables >
 6=&Browse...
 
 [DIALOG_A]
