--- a/Xreveal_CHT.ini
+++ b/Xreveal_CHT.ini
@@ -57,6 +57,7 @@ Author=
 7=移除 APS（模擬保護系統）
 8=刪除UOP（使用者操作禁止）
 9=刪除 ARccOS
+10=字幕透明度
 11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
@@ -117,13 +118,7 @@ Author=
 9=Read rate:
 
 [DIALOG_16]
-0=玩家區域
-
-[DIALOG_17]
-0=字幕
-3=字幕透明度
-4=隱形
-5=實心
+0=區域
 
 [DIALOG_18]
 0=註冊
@@ -192,7 +187,7 @@ Author=
 0=Actions
 3=Post-Scan action
 4=Specify a command to run after scanning media.
-5=&Macros >>
+5=&Variables >
 6=&Browse...
 
 [DIALOG_A]
