--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -57,6 +57,7 @@ Author=
 7=Remove &APS (Analog Protection System)
 8=Remove &UOPs (User Operation Prohibitions)
 9=Remove &ARccOS
+10=&Subtitle transparency
 11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
@@ -118,12 +119,6 @@ Author=
 
 [DIALOG_16]
 0=Players Region
-
-[DIALOG_17]
-0=Subtitles
-3=&Subtitle transparency
-4=Invisible
-5=Solid
 
 [DIALOG_18]
 0=Register Xreveal
@@ -192,7 +187,7 @@ Author=
 0=Actions
 3=Post-Scan action
 4=Specify a command to run after scanning media.
-5=&Macros >>
+5=&Variables >
 6=&Browse...
 
 [DIALOG_A]
