--- a/Xreveal_FIN.ini
+++ b/Xreveal_FIN.ini
@@ -57,6 +57,7 @@ Author=TJL
 7=Poista analoginen suojausjärjestelmä
 8=Poista kielletyt käyttäjätoiminnot
 9=Poista ARccOS
+10=Tekstityksen läpinäkyvyys
 11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
@@ -118,12 +119,6 @@ Author=TJL
 
 [DIALOG_16]
 0=Soittimen alue
-
-[DIALOG_17]
-0=Tekstitykset
-3=Tekstityksen läpinäkyvyys
-4=Näkymätön
-5=Näkyvä
 
 [DIALOG_18]
 0=Rekisteröinti
@@ -192,7 +187,7 @@ Author=TJL
 0=Actions
 3=Post-Scan action
 4=Specify a command to run after scanning media.
-5=&Macros >>
+5=&Variables >
 6=&Browse...
 
 [DIALOG_A]
