--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -57,6 +57,7 @@ Author=Andex
 7=Supprimer A&PS (Analog Protection System)
 8=Supprimer &UOPs (User Operation Prohibitions)
 9=Supprimer ARcc&OS (Advanced Regional copy control Operating Solution)
+10=&Transparence des sous-titres
 11=Note: vous devez utiliser le fichier <a>libdvdcss-2.dll</a> pour que Xreveal puisse ouvrir un DVD.
 
 [DIALOG_11]
@@ -118,12 +119,6 @@ Author=Andex
 
 [DIALOG_16]
 0=Régions
-
-[DIALOG_17]
-0=Sous-titres
-3=&Transparence des sous-titres
-4=Transparent (0)
-5=Opaque (15)
 
 [DIALOG_18]
 0=Enregistrement de la licence Pro
@@ -192,7 +187,7 @@ Author=Andex
 0=Actions
 3=Actions Post-Scan
 4=Spécifiez une commande à exécuter après le scan d'un média:
-5=&Macros >>
+5=&Variables >
 6=&Commande...
 
 [DIALOG_A]
