--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -57,6 +57,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 7=Hapus &SPA (Sistem Proteksi Analog)
 8=Hapus &UOPs (User Operation Prohibitions)
 9=Hapus &ARccOS
+10=&Transparan Takarir
 11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
@@ -118,12 +119,6 @@ Author= Lieba Natur Brilian (naturbrilian)
 
 [DIALOG_16]
 0=Region Pemutar
-
-[DIALOG_17]
-0=Takarir
-3=&Transparan Takarir
-4=Disembunyikan
-5=Solid
 
 [DIALOG_18]
 0=Daftar Xreveal
@@ -192,7 +187,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 0=Actions
 3=Post-Scan action
 4=Specify a command to run after scanning media.
-5=&Macros >>
+5=&Variables >
 6=&Browse...
 
 [DIALOG_A]
