--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -57,6 +57,7 @@ Author=bovirus (bovirus@gmail.com)
 7=Rimuovi &APS (sistema protezione analogico)
 8=Rimuovi &UOP (proibizioni operazioni utente)
 9=Rimuovi &ARccOS
+10=Sottotitoli trasparenti
 11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
@@ -118,12 +119,6 @@ Author=bovirus (bovirus@gmail.com)
 
 [DIALOG_16]
 0=Regione riproduttore
-
-[DIALOG_17]
-0=Sottotitoli
-3=Sottotitoli trasparenti
-4=Invisibili
-5=Solidi
 
 [DIALOG_18]
 0=Registra Xreveal
@@ -192,7 +187,7 @@ Author=bovirus (bovirus@gmail.com)
 0=Actions
 3=Post-Scan action
 4=Specify a command to run after scanning media.
-5=&Macros >>
+5=&Variables >
 6=&Browse...
 
 [DIALOG_A]
