--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -57,6 +57,7 @@ Author=Re*Index.(ot_inc)
 7=アナログプロテクトを解除
 8=ユーザー操作禁止を解除
 9=ARccOS を削除
+10=字幕を透過
 11=Xreveal で DVD を開くには <a>libdvdcss-2.dll</a> が必要です。
 
 [DIALOG_11]
@@ -118,12 +119,6 @@ Author=Re*Index.(ot_inc)
 
 [DIALOG_16]
 0=プレーヤーのリージョン
-
-[DIALOG_17]
-0=字幕
-3=字幕を透過
-4=透明
-5=不透明
 
 [DIALOG_18]
 0=登録
@@ -192,7 +187,7 @@ Author=Re*Index.(ot_inc)
 0=Actions
 3=Post-Scan action
 4=Specify a command to run after scanning media.
-5=&Macros >>
+5=&Variables >
 6=&Browse...
 
 [DIALOG_A]
