--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -57,6 +57,7 @@ Author=Fresta
 7=Usuń APS (Analog Protection System)
 8=Usuń UOPs (User Operation Prohibitions)
 9=Usuń ARccOS
+10=Przejrzystość Napisów
 11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
@@ -118,12 +119,6 @@ Author=Fresta
 
 [DIALOG_16]
 0=Region odtwarzacza
-
-[DIALOG_17]
-0=Napisy
-3=Przejrzystość Napisów
-4=Niewidzialne
-5=Stałe
 
 [DIALOG_18]
 0=Zarejestruj Xreveal
@@ -192,7 +187,7 @@ Author=Fresta
 0=Actions
 3=Post-Scan action
 4=Specify a command to run after scanning media.
-5=&Macros >>
+5=&Variables >
 6=&Browse...
 
 [DIALOG_A]
