--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -57,6 +57,7 @@ Author=jekovcar
 7=Удалить &APS (аналоговую систему защиты)
 8=Удалить &UOPs (запреты на действия пользователя)
 9=Удалить &ARccOS
+10=&Прозрачность субтитров
 11=Xreveal требуется <a>libdvdcss-2.dll</a> для открытия DVD-дисков.
 
 [DIALOG_11]
@@ -118,12 +119,6 @@ Author=jekovcar
 
 [DIALOG_16]
 0=Регион плеера
-
-[DIALOG_17]
-0=Субтитры
-3=&Прозрачность субтитров
-4=Невидимые
-5=Сплошные
 
 [DIALOG_18]
 0=Регистрация Xreveal
@@ -192,7 +187,7 @@ Author=jekovcar
 0=Actions
 3=Post-Scan action
 4=Specify a command to run after scanning media.
-5=&Macros >>
+5=&Variables >
 6=&Browse...
 
 [DIALOG_A]
