--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -57,6 +57,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 7=Odstrani analogni zaščitni sistem
 8=Odstrani prepovedane uporabniške operacije
 9=Odstrani ARccOS
+10=Prosojnost podnapisov
 11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
@@ -118,12 +119,6 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 
 [DIALOG_16]
 0=Regija igralcev
-
-[DIALOG_17]
-0=Podnapisi
-3=Prosojnost podnapisov
-4=Nevidno
-5=Neprosojno
 
 [DIALOG_18]
 0=Registracija
@@ -192,7 +187,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 0=Actions
 3=Post-Scan action
 4=Specify a command to run after scanning media.
-5=&Macros >>
+5=&Variables >
 6=&Browse...
 
 [DIALOG_A]
