--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -57,6 +57,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 7=Eliminar &APS (Sistema de Protección Analógica)
 8=Eliminar &UOPs (Prohibiciones de Operaciones de Usuario)
 9=Eliminar &ARccOS
+10=&Transparencia de los subtítulos
 11=Xreveal necesita <a>libdvdcss-2.dll</a> para abrir DVDs.
 
 [DIALOG_11]
@@ -118,12 +119,6 @@ Author=Steven Rogers, Leandro Botella Penalva
 
 [DIALOG_16]
 0=Región de las Unidades
-
-[DIALOG_17]
-0=Subtítulos
-3=&Transparencia de los subtítulos
-4=Invisibles
-5=Sólidos
 
 [DIALOG_18]
 0=Registrar Xreveal
@@ -192,7 +187,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 0=Acciones
 3=Acción post-análisis
 4=Especifica un comando a ejecutar tras analizar los medios.
-5=&Macros >>
+5=&Variables >
 6=&Examinar...
 
 [DIALOG_A]
