--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -57,6 +57,7 @@ Author=Sopor
 7=Ta bort analogt skyddssystem
 8=Ta bort förbjudna användaråtgärder
 9=Ta bort ARccOS
+10=Transparens för undertexter
 11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
@@ -118,12 +119,6 @@ Author=Sopor
 
 [DIALOG_16]
 0=spelarens region
-
-[DIALOG_17]
-0=Undertexter
-3=Transparens för undertexter
-4=Osynlig
-5=Fast
 
 [DIALOG_18]
 0=Registrering
@@ -192,7 +187,7 @@ Author=Sopor
 0=Actions
 3=Post-Scan action
 4=Specify a command to run after scanning media.
-5=&Macros >>
+5=&Variables >
 6=&Browse...
 
 [DIALOG_A]
