--- a/Xreveal_ARA.ini
+++ b/Xreveal_ARA.ini
@@ -57,6 +57,7 @@ Author=فتحي الداودية
 7=إزالة نظام الحماية التناظرية
 8=إزالة عمليات المستخدم المحظورة
 9=Remove ARccOS
+10=&Subtitle transparency
 11=Xreveal needs <a>libdvdcss-2.dll</a> to open DVDs.
 
 [DIALOG_11]
@@ -118,12 +119,6 @@ Author=فتحي الداودية
 
 [DIALOG_16]
 0=منطقة مشغلات
-
-[DIALOG_17]
-0=Subtitles
-3=&Subtitle transparency
-4=Invisible
-5=Solid
 
 [DIALOG_18]
 0=التسجيل
@@ -192,7 +187,7 @@ Author=فتحي الداودية
 0=Actions
 3=Post-Scan action
 4=Specify a command to run after scanning media.
-5=&Macros >>
+5=&Variables >
 6=&Browse...
 
 [DIALOG_A]
