--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -57,6 +57,7 @@ Author=VenusGirl (비너스걸)
 7=아날로그 보호 시스템 제거
 8=금지된 사용자 작업 제거
 9=ARccOS 제거
+10=자막 투명도
 11=Xreveal에서 DVD를 열려면 <a>libdvdcss-2.dll</a>이 필요합니다.
 
 [DIALOG_11]
@@ -118,12 +119,6 @@ Author=VenusGirl (비너스걸)
 
 [DIALOG_16]
 0=재생 지역
-
-[DIALOG_17]
-0=자막
-3=자막 투명도
-4=보이지 않음
-5=솔리드
 
 [DIALOG_18]
 0=등록
@@ -192,7 +187,7 @@ Author=VenusGirl (비너스걸)
 0=Actions
 3=Post-Scan action
 4=Specify a command to run after scanning media.
-5=&Macros >>
+5=&Variables >
 6=&Browse...
 
 [DIALOG_A]
