--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -72,9 +72,9 @@ Author=Andex
 10=Désactiver BD-&Live
 11=&Simuler un affichage 3D
 12=Nom de dossier 'spécial'
-13=Utiliser l'accélération &matérielle
+13=Utiliser l'accélération &matérielle AES
 14= <a>Test</a>
-15=Supprimer les publicités et bandes-annonces &ennuyeuses
+15=Supprimer les avertissements et bandes-annonces &ennuyeuses
 16=Supprimer les sé&quences vidéo inférieures à %s minutes
 
 [DIALOG_12]
@@ -243,7 +243,7 @@ Author=Andex
 25=Processus terminé avec succès!
 26=Pas de clé de déchiffrement trouvée dans {%s}!
 27=
-28=Xreveal n'a pas réussi à ouvrir le disque!\nCode d'erreur: %s
+28=Echec d'ouverture du disque, code d'erreur: %s
 29=Lecteur
 30=Fabricant
 31=Produit
@@ -282,7 +282,7 @@ Author=Andex
 64=Région %C
 65=&Toujours devant
 66=&Acheter...
-67=Licence attribuée à %s\r\nNombre d’utilisateurs: %d\r\nMises à jour gratuites: %s
+67=Licence attribuée à %s\r\nNombre d’utilisateurs: %d\r\nLicence valide jusqu'à: %s
 68=Pour toujours
 69=&Enregistrer...
 70=Merci pour votre enregistrement :-)
