--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0402
 Name=Bulgarian(Български)
-Version=2.7.0
+Version=2.7.4
 Author=jekovcar
 1=ОК
 2=Отказ
@@ -42,7 +42,7 @@ Author=jekovcar
 6=&Списък дискове в менюто на системната област
 7=&Автопроверка за актуализации
 8=<a>Провери сега</a>
-9=Theme:
+9=Тема:
 
 [DIALOG_9]
 0=CD
@@ -74,12 +74,12 @@ Author=jekovcar
 12=Преименуване на папки
 13=Използвай &AES хардуерно ускорение
 14=<a>Бенчмарк</a>
-15=Remove &annoying adverts and trailers
-16=Remove video sequences &shorter than %s minutes
+15=Премахни &досадните реклами и трейлъри
+16=Премахни видео поредици &по-кратки от %s минутаs
 
 [DIALOG_12]
 0=KeyDB
-3=Xreveal не съдържа ключове за декриптиране, ще ви трябва база данни с ключове, за да работи. <a>За повече подробности</a>.
+3=Xreveal не съдържа ключове за декриптиране, нужна е база данни с ключове, за да работи. <a>За повече подробности</a>.
 4=KeyDB.cfg местоположение
 6=&Търси ключ онлайн
 
@@ -160,7 +160,7 @@ Author=jekovcar
 3=Привод:
 4=Сериен номер:
 5=специфично за доставчика:
-6=Включи криптиране на шина:
+6=Включи криптиране шина:
 
 [DIALOG_25]
 0=Импорт...
@@ -184,16 +184,16 @@ Author=jekovcar
 6=Файлът е създаден успешно.
 
 [DIALOG_29]
-0=Actions
-3=Post-Scan action
-4=Specify a command to run after scanning media.
-5=&Variables >
-6=&Browse...
+0=Действия
+3=Действие след сканиране
+4=Задайте команда, да се изпълни след сканиране на носителя.
+5=&Променливи >
+6=&Преглед...
 
 [DIALOG_A]
 0=Актуализация софтуер
 3=Налична е нова версия на %s!
-4=%s вече е наличен - имате %s. Искате ли да изтеглите сега?
+4=%s вече е наличен - имате %s. Ще изтеглите сега?
 5=Бележки по изданието:
 6=Пропускане на тази версия
 7=Напомни по-късно
@@ -206,7 +206,7 @@ Author=jekovcar
 [DIALOG_B]
 1=Изпрати
 3=%s е срещнал проблем и трябва да се затвори. Извиняваме се за неудобството.
-4=Моля, изпратете ни този отчет за грешка, за да помогнем за отстраняването на проблема и подобряването на този софтуер.
+4=Моля, изпратете този отчет за грешка, за да помогнем за отстраняването на проблема и подобряването на този софтуер.
 
 [DIALOG_C]
 0=Обратна връзка
@@ -356,10 +356,10 @@ Author=jekovcar
 138=Актуализирайте лиценза
 139=Ще създаде защитен имидж файл. Файлът може да бъде четен само от виртуален диск, ако Xreveal е инсталиран и работи!\n\nДа продължи?
 140=Да изтрие непълния файл?\n\n%s
-141=Light
-142=Dark
-143=System
-144=(%u retries)
-145=Pause the operation
-146=Resume the operation
+141=Светла
+142=Тъмна
+143=Система
+144=(%u повтори)
+145=Пауза на операцията
+146=Възобнови операцията
 147=Програми
