--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0419
 Name=Russian (Русский)
-Version=2.7.0
+Version=2.7.4
 Author=jekovcar
 1=ОК
 2=Отмена
@@ -42,7 +42,7 @@ Author=jekovcar
 6=&Показать диски в меню на панели задач
 7=&Автоматическая проверка обновлений
 8=<a>Проверить сейчас</a>
-9=Theme:
+9=Тема:
 
 [DIALOG_9]
 0=CD
@@ -74,12 +74,12 @@ Author=jekovcar
 12=Переименование папок
 13=Использовать аппаратное ускорение &AES
 14=<a>Бенчмарк</a>
-15=Remove &annoying adverts and trailers
-16=Remove video sequences &shorter than %s minutes
+15=Удалить назойливую рекламу и трейлеры
+16=Удалить видеофрагменты продолжительностью менее 10 минут.
 
 [DIALOG_12]
 0=KeyDB
-3=Xreveal не содержит ключей дешифрования, для работы вам понадобится база данных ключей. <a>Больше подробностей</a>.
+3=Xreveal не содержит ключей дешифрования, для работы понадобится база данных ключей. <a>Больше подробностей</a>.
 4=Местоположение KeyDB.cfg
 6=&Найти ключ онлайн
 
@@ -184,11 +184,11 @@ Author=jekovcar
 6=Файл успешно создан.
 
 [DIALOG_29]
-0=Actions
-3=Post-Scan action
-4=Specify a command to run after scanning media.
-5=&Variables >
-6=&Browse...
+0=Действия
+3=Действие после сканирования
+4=Укажите команду, которая будет выполняться после сканирования носителя.
+5=&Переменные >
+6=&Обзор...
 
 [DIALOG_A]
 0=Обновление программы
@@ -356,10 +356,10 @@ Author=jekovcar
 138=Обновить лицензию
 139=Создаст защищенный файл изображения. Файл можно будет читать только с виртуального диска, если Xreveal установлен и запущен!\n\nПродолжить?
 140=Удалить неполный файл?\n\n%s
-141=Light
-142=Dark
-143=System
-144=(%u retries)
-145=Pause the operation
-146=Resume the operation
+141=Светлая
+142=Темная
+143=Система
+144=(%повторных попыток)
+145=Приостановить операцию
+146=Возобновить операцию
 147=Программы
