12=Rename folders  =>  12=Rename AACS &folder to

--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -71,7 +71,7 @@ Author=jekovcar
 9=Премахни CCI (Инфо контрол за копиране)
 10=Деактивирай BD-Live
 11=Симулирай подключен 3D дисплей
-12=Преименуване на папки
+12=Rename AACS &folder to
 13=Използвай &AES хардуерно ускорение
 14=<a>Бенчмарк</a>
 15=Премахни &досадните реклами и трейлъри
