--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -71,7 +71,7 @@ Author=Tanuki
 9=移除 &CCI (拷贝控制信息)
 10=禁止 BD-&Live
 11=模拟已连接 &3D 显示器
-12=重命名文件夹
+12=将AACS文件夹改名为
 13=启用 AES 硬件加速(&H)
 14=<a>测速</a>
 15=移除烦人的广告和预告片(&A)
