--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -71,7 +71,7 @@ Author=The Punisher
 9=Copy-Control-Informationen entfernen
 10=BD-Live deaktivieren
 11=Angeschlossenes 3D-Display simulieren
-12=Ordner temporär umbenennen
+12=Rename AACS &folder to
 13=&AES Hardwarebeschleunigung nutzen
 14=<a>Benchmark</a>
 15=Entfernung von &störender Werbung und Trailern
