--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -71,7 +71,7 @@ Author=
 9=Remove &CCI (Copy Control Information)
 10=Disable BD-&Live
 11=Simulate connected &3D display
-12=Rename folders
+12=Rename AACS &folder to
 13=Using AES &hardware acceleration
 14=<a>Benchmark</a>
 15=Remove &annoying adverts and trailers
@@ -223,7 +223,7 @@ Author=
 5=6 - China
 6=7 - Reserved
 7=8 - Special international venues (airplanes, cruise ships, etc.)
-8=A - North America, Central America, South America, Korea, Japan, Southeast Asia
+8=A - America, Canada, Japan, Korea, etc
 9=B - Europe, Middle East, Africa, Australia, New Zealand
 10=C - Russia, India, China, the rest of world
 11=Ask before opening the disc
