--- a/Xreveal_FIN.ini
+++ b/Xreveal_FIN.ini
@@ -71,7 +71,7 @@ Author=TJL
 9=Poista kopioinnin hallintatiedot
 10=Poista käytöstä BD-Live
 11=Simuloi kytkettyä 3D-näyttöä
-12=Rename folders
+12=Rename AACS &folder to
 13=Using AES &hardware acceleration
 14=<a>Benchmark</a>
 15=Remove &annoying adverts and trailers
