--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -71,7 +71,7 @@ Author=Andex
 9=Supprimer &CCI (Copy Control Information)
 10=Désactiver BD-&Live
 11=&Simuler un affichage 3D
-12=Nom de dossier 'spécial'
+12=Rename AACS &folder to
 13=Utiliser l'accélération &matérielle AES
 14= <a>Test</a>
 15=Supprimer les avertissements et bandes-annonces &ennuyeuses
