--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -71,7 +71,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 9=Hapus &CCI (Copy Control Information)
 10=Nonaktifkan BD-&Live
 11=&Simulasikan sambungan tampilan 3D
-12=Namai ulang folder
+12=Rename AACS &folder to
 13=Gunakan akselerasi perangkat keras &AES
 14=<a>Benchmark</a>
 15=Remove &annoying adverts and trailers
