--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -71,7 +71,7 @@ Author=bovirus (bovirus@gmail.com)
 9=Rimuo&vi CCI (Copy Control Information)
 10=Disabilita BD &Live
 11=&Simula display 3D connesso
-12=Rinomina cartelle
+12=Rename AACS &folder to
 13=Usa accelerazione hardware &AES
 14=<a>Prestazioni</a>
 15=Remove &annoying adverts and trailers
