--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -71,7 +71,7 @@ Author=Re*Index.(ot_inc)
 9=コピーコントロール情報を削除
 10=BD-Live を無効化
 11=3D ディスプレイをエミュレートする
-12=フォルダーの名前を変更
+12=Rename AACS &folder to
 13=AES ハードウェアアクセラレーションを使用する(&A)
 14=<a>ベンチマーク</a>
 15=Remove &annoying adverts and trailers
