--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -71,7 +71,7 @@ Author=Fresta
 9=Usuń CCI (Copy Control Information)
 10=Wyłącz BD-Live
 11=Symulacja podłączonego wyświetlacza 3D
-12=Rename folders
+12=Rename AACS &folder to
 13=Using AES &hardware acceleration
 14=<a>Benchmark</a>
 15=Remove &annoying adverts and trailers
