--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -71,7 +71,7 @@ Author=jekovcar
 9=Удалить &CCI (информацию управления копированием)
 10=Отключить BD-&Live
 11=&Имитировать подключенный 3D-дисплей
-12=Переименование папок
+12=Rename AACS &folder to
 13=Использовать аппаратное ускорение &AES
 14=<a>Бенчмарк</a>
 15=Удалить назойливую рекламу и трейлеры
