--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -71,7 +71,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 9=Odstrani CCI (informacije o nadzoru kopiranja)
 10=Onemogoči BD-Live
 11=Simuliraj povezan 3D zaslon
-12=Rename folders
+12=Rename AACS &folder to
 13=Using AES &hardware acceleration
 14=<a>Benchmark</a>
 15=Remove &annoying adverts and trailers
