--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -71,7 +71,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 9=Eliminar &CCI (Información de Control de Copia)
 10=Deshabilitar BD-&Live
 11=&Simular pantalla 3D conectada
-12=Renombrar carpetas
+12=Rename AACS &folder to
 13=Usar aceleración por hardware &AES
 14=<a>Prueba de rendimiento</a>
 15=Eliminar anuncios &molestos y tráileres
