--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -71,7 +71,7 @@ Author=Sopor
 9=Ta bort kopieringskontrollinformation
 10=Inaktivera BD-Live
 11=Simulera ansluten 3D-skärm
-12=Rename folders
+12=Rename AACS &folder to
 13=Using AES &hardware acceleration
 14=<a>Benchmark</a>
 15=Remove &annoying adverts and trailers
