--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -71,7 +71,7 @@ Author=VenusGirl (비너스걸)
 9=복사 제어 정보 제거
 10=BD-Live 사용 안 함
 11=연결된 3D 디스플레이 시뮬레이션
-12=폴더 이름 바꾸기
+12=Rename AACS &folder to
 13=AES 하드웨어 가속화 사용(&A)
 14=<a>북마크</a>
 15=Remove &annoying adverts and trailers
