--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0411
 Name=Japanese(日本語)
-Version=2.7.2
+Version=2.7.4.1
 Author=Re*Index.(ot_inc)
 1=OK
 2=キャンセル
@@ -29,7 +29,7 @@ Author=Re*Index.(ot_inc)
 
 [DIALOG_6]
 0=設定
-3=既定
+3=既定に戻す
 
 [DIALOG_7]
 0=状態
@@ -51,9 +51,9 @@ Author=Re*Index.(ot_inc)
 [DIALOG_10]
 0=DVD
 3=DVD のサポートを有効化(&E)
-4=地域コードを削除
-5=リージョンコードエンハンスメントを解除
-6=地域コード:
+4=リージョンコードを削除
+5=Regional Code Enhancement(RCE) を解除
+6=リージョンコード:
 7=アナログプロテクトを解除
 8=ユーザー操作禁止を解除
 9=ARccOS を削除
@@ -64,18 +64,18 @@ Author=Re*Index.(ot_inc)
 0=BD & UHD
 3=Blu-ray のサポートを有効化(&E)
 4=BD+ の解除
-5=Blu-ray 地域コードを削除
+5=Blu-ray のリージョンコードを削除
 6=ディスクのリージョン:
 7=リージョンコード:
 8=ユーザー操作禁止を解除
 9=コピーコントロール情報を削除
 10=BD-Live を無効化
 11=3D ディスプレイをエミュレートする
-12=Rename AACS &folder to
+12=AACS フォルダーの名前を変更する(&F)
 13=AES ハードウェアアクセラレーションを使用する(&A)
 14=<a>ベンチマーク</a>
-15=Remove &annoying adverts and trailers
-16=Remove video sequences &shorter than %s minutes
+15=迷惑な広告やトレーラーを削除(&A)
+16=%s 分未満のビデオシーケンスを削除(&S)
 
 [DIALOG_12]
 0=KeyDB
@@ -158,7 +158,7 @@ Author=Re*Index.(ot_inc)
 [DIALOG_24]
 0=ドライブの情報
 3=ドライブ:
-4=シリアルナンバー:
+4=シリアル番号:
 5=固有ベンダー:
 6=バス暗号化の対応:
 
@@ -184,22 +184,22 @@ Author=Re*Index.(ot_inc)
 6=ファイルが正常に作成されました。
 
 [DIALOG_29]
-0=Actions
-3=Post-Scan action
-4=Specify a command to run after scanning media.
-5=&Variables >
-6=&Browse...
+0=アクション
+3=スキャン後のアクション
+4=メディアをスキャン後に実行するコマンドを指定します。
+5=変数(&V) >
+6=参照(&B)...
 
 [DIALOG_A]
-0=ソフトウェアアップデート
-3=%s の最新バージョンが利用可能です
-4=%s が利用可能です。現在:%s ダウンロードをしますか？
+0=ソフトウェアのアップデート
+3=「%s」の最新バージョンが利用可能です。
+4=最新のバージョン「%s」が利用可能です(現在のバージョン:%s)。ダウンロードをしますか？
 5=更新履歴:
 6=スキップ
 7=後で
 8=インストール
 9=%s 中 %s をダウンロード中
-10=あなたは最新バージョンのソフトウェアを使用しています。\n\n%s の新しいバージョンが利用可能です。
+10=あなたは最新バージョンのソフトウェアを使用しています。\n\n「%s」の新しいバージョンが利用可能です。
 11=アップデート情報の取得に失敗しました。もう一度お試しください。
 12=アップデートのダウンロードに失敗しました。もう一度お試しください。
 
@@ -228,7 +228,7 @@ Author=Re*Index.(ot_inc)
 10=C - ロシア、インド、中国、その他
 11=ディスクを開く前に尋ねる
 12=再度表示しない
-13=CD/DVD/Blu-ray ドライブが見つかりません。\n\n考えられる理由:\n1.CD/DVD ドライブがない\n\n2.ドライブに電源が入っていないか、接続されていない
+13=CD/DVD/Blu-ray ドライブが見つかりません。\n\n考えられる理由:\n1. CD/DVD ドライブがない\n\n2. ドライブの電源が入っていないか、未接続
 14=ドライバーのバージョンが違います:%d.%d≠%d.%d.\n\nXreveal を再インストールしてください。
 15=必要なファイルがありません。\n\nXreveal を再起動してください。
 16=Xreveal のインストールに失敗しています。\n\n修復しますか？
@@ -249,7 +249,7 @@ Author=Re*Index.(ot_inc)
 31=製品
 32=バージョン
 33=特定
-34=シリアルナンバー
+34=シリアル番号
 35=なし
 36=はい
 37=いいえ
@@ -272,7 +272,7 @@ Author=Re*Index.(ot_inc)
 54=読み込み(&L)
 55=プロパティ(&P)
 56=なし
-57=このプログラムはフリー版です。\n\nこのプログラムが役に立った場合は、<a>寄付</a>をして改善に役立ててください。
+57=このプログラムは無料版です。\n\nこのプログラムが役に立った場合は、<a>寄付</a>をして機能の改善にご協力ください。
 58=%sはすでに存在します。\n置き換えますか？
 59=本当にキャンセルしますか？
 60=ライセンスは %s に期限切れになりました。
@@ -288,7 +288,7 @@ Author=Re*Index.(ot_inc)
 70=ご登録ありがとうございます！
 71=入力したキーは正しくありません。
 72=ディスクなし
-73=すべてのオプションを既定値にリセットしますか？\n\n「いいえ」をクリックすると、現在のページのオプションがリセットされるだけです。
+73=すべてのオプションを既定値にリセットしますか？\n\n「いいえ」をクリックすると、現在のページのオプションのみをリセットします。
 74=ID
 75=状態
 76=ラベル
@@ -310,7 +310,7 @@ Author=Re*Index.(ot_inc)
 92=すべて削除(&A)
 93=｢%s｣を削除してもよろしいですか？
 94=すべてのレコードを削除してもよろしいですか？
-95=この機能は <a>Pro バージョン</a>でのみ利用できます。
+95=この機能は <a>Pro 版</a>でのみ利用できます。
 96=更新(&R)
 97=編集(&E)
 98=インポート(&I)...
@@ -330,7 +330,7 @@ Author=Re*Index.(ot_inc)
 112=｢%s｣のディレクトリは存在しません。作成しますか？
 113=完了後: 
 114=何もしない
-115=, 
+115=| 
 116=ディスクを取り出し
 117=サウンドを再生
 118=Xreveal を終了
@@ -352,7 +352,7 @@ Author=Re*Index.(ot_inc)
 134=%s の読み取り中にエラーが発生しました！\nセクター: %u-%u
 135=処理の中止を承認しました
 136=コピー中...
-137=Pro の機能
+137=Pro 版の機能
 138=ライセンスを更新
 139=保護されたイメージファイルを作成します。ファイルは、Xreveal がインストールと実行がされている場合でのみ仮想ドライブから読み取ることができます！\n\n続行しますか？
 140=未完了のファイルを削除しますか？\n\n%s
