--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -71,11 +71,11 @@ Author=Andex
 9=Supprimer &CCI (Copy Control Information)
 10=Désactiver BD-&Live
 11=&Simuler un affichage 3D
-12=Rename AACS &folder to
+12=Re&nommer le dossier AACS
 13=Utiliser l'accélération &matérielle AES
 14= <a>Test</a>
 15=Supprimer les avertissements et bandes-annonces &ennuyeuses
-16=Supprimer les sé&quences vidéo inférieures à %s minutes
+16=Supprimer les séquences &vidéo inférieures à %s minutes
 
 [DIALOG_12]
 0=KeyDB
