--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -70,8 +70,8 @@ Author=Steven Rogers, Leandro Botella Penalva
 8=Eliminar &UOPs (Prohibiciones de Operaciones de Usuario)
 9=Eliminar &CCI (Información de Control de Copia)
 10=Deshabilitar BD-&Live
-11=&Simular pantalla 3D conectada
-12=Rename AACS &folder to
+11=Simular pantalla &3D conectada
+12=Renombrar &carpeta AACS a
 13=Usar aceleración por hardware &AES
 14=<a>Prueba de rendimiento</a>
 15=Eliminar anuncios &molestos y tráileres
@@ -223,7 +223,7 @@ Author=Steven Rogers, Leandro Botella Penalva
 5=6 - China
 6=7 - Reservado
 7=8 - Lugares internacionales especiales (aeropuertos, cruceros, etc.)
-8=A - Norteamérica, América Central, Sudamérica, Corea, Japón, Sudeste Asiático
+8=A - América, Canadá, Japón, Corea, etc.
 9=B - Europa, Oriente Medio, África, Australia, Nueva Zelanda
 10=C - Rusia, India, China, el resto del mundo
 11=Preguntar antes de abrir el disco
